[package]
name = "javalocate"
version = "0.7.1"
description = "Command line utility to find JVM versions on macOS, Linux and Windows"
license = "Apache-2.0"
repository = "https://github.com/dameikle/javalocate"
edition = "2021"

[dependencies]
plist = "1"
java-properties = "2.0.0"
[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52.0"
